--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@prisma/client": "^5.16.1",
     "fast-sort": "^3.4.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.4",
+    "next-auth": "^5.0.0-beta.19",
     "next-cloudinary": "^6.6.2",
     "prisma": "^5.16.1",
     "react": "^18",
