--- a/package.json
+++ b/package.json
@@ -6,21 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "react-email": "email dev -p 3030"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.4.1",
     "@prisma/client": "^5.16.1",
+    "@react-email/components": "0.0.21",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "fast-sort": "^3.4.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "next": "14.2.4",
-    "next-auth": "^5.0.0-beta.19",
+    "next-auth": "^5.0.0-beta.18",
     "next-cloudinary": "^6.6.2",
+    "node-gyp": "^10.1.0",
     "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "2.1.5",
+    "resend": "^3.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
